<resources>
    <string name="app_name">BulkyBook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="ready_to_dive_into_a_world_of_endless_reading_possibilities">Ready to dive into a world of endless reading possibilities?</string>
    <string name="welcome_to_our_ecommerce_book_app_discover_your_next_favorite_book_with_us">Welcome to our ecommerce book app Discover your next favorite book with us.</string>
    <string name="our_app_offers_a_vast_collection_of_books_in_all_genres_ready_for_you_to_explore">Our app offers a vast collection of books in all genres, ready for you to explore.</string>
    <string name="read_without_limits">Read Without Limits</string>
    <string name="bullkybooks">BullkyBooks</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="youremail_provider_com">youremail@provider.com</string>
    <string name="continue_as_guest">Continue As Guest?</string>
    <string name="or">OR</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="loading">Loading...</string>
    <string name="account_settings">Account Settings</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="wishlist">Wishlist</string>
    <string name="admin_mod_panel">Admin/Mod Panel</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="sold_books">Sold Books</string>
    <string name="go_back">Go Back</string>
</resources>