<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.Auth.SignInFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                style="@style/BlackTextColorStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/bullkybooks"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/LightGrayTextColorStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_without_limits"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="100dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/BlackTextColorStyle"
                    android:layout_marginBottom="10dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/your_email_address" />

                <EditText
                    android:id="@+id/Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:gravity="center|start"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    style="@style/EditTextStyle"
                    android:hint="@string/youremail_provider_com"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    style="@style/BlackTextColorStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:paddingHorizontal="10dp"
                    android:text="Your Password" />

                <EditText
                    android:id="@+id/Password"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:gravity="center|start"
                    android:hint="***********"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:singleLine="true" />

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/SignIn"
                style="@style/PrimaryButtonRoundStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="120dp"
                android:text="@string/sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <TextView
                style="@style/BlackTextColorStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toTopOf="@+id/appCompatButton2"
                app:layout_constraintEnd_toEndOf="@+id/appCompatButton"
                app:layout_constraintStart_toStartOf="@+id/appCompatButton"
                app:layout_constraintTop_toBottomOf="@+id/appCompatButton" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/SignUp"
                style="@style/LightGreenButtonRoundStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatButton" />

            <TextView
                android:id="@+id/CountinueAsGuest"
                style="@style/BlackTextColorStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_as_guest"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatButton2" />


        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>